--- a/RayCarrot.WPF/Dialogs/DialogMessageBox/DialogMessageBox.xaml
+++ b/RayCarrot.WPF/Dialogs/DialogMessageBox/DialogMessageBox.xaml
@@ -1,11 +1,10 @@
 ﻿<UserControl x:Class="RayCarrot.WPF.DialogMessageBox"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:RayCarrot.WPF"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        mc:Ignorable="d"
-        d:DataContext="{x:Static local:DesignTimeVM.DialogMessageViewModel}">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:RayCarrot.WPF"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d" d:DataContext="{d:DesignInstance local:DialogMessageViewModel}">
 
     <Grid Margin="1" MinWidth="430" MinHeight="170" MaxWidth="600">
         <Grid.RowDefinitions>
@@ -32,7 +31,7 @@
         </Grid>
         <ItemsControl Grid.Row="1" HorizontalAlignment="Right" ItemsSource="{Binding Path=DialogActions}">
             <ItemsControl.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate DataType="local:DialogMessageActionViewModel">
                     <Button Content="{Binding Path=DisplayText}"
                             ToolTip="{Binding Path=DisplayDescription}"
                             IsDefault="{Binding Path=IsDefault}"
