--- a/RayCarrot.WPF/Dialogs/DriveSelectionDialog/DriveSelectionDialog.xaml
+++ b/RayCarrot.WPF/Dialogs/DriveSelectionDialog/DriveSelectionDialog.xaml
@@ -7,8 +7,7 @@
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="600"
-             d:DataContext="{Binding Source={x:Static local:DesignTimeVM.DriveSelectionViewModel}}"
-             Loaded="UserControl_Loaded">
+             Loaded="UserControl_LoadedAsync" d:DataContext="{d:DesignInstance local:DriveSelectionViewModel}">
     <UserControl.InputBindings>
 
         <!-- Refresh -->
@@ -33,10 +32,10 @@
                   CanUserResizeRows="False" 
                   CanUserSortColumns="True" 
                   IsReadOnly="True" 
-                  PreviewKeyDown="DataGrid_KeyDown"
-                  ItemsSource="{Binding Path=Drives}" 
+                  PreviewKeyDown="DataGrid_KeyDownAsync"
+                  ItemsSource="{Binding Path=Drives}"
                   SelectedItem="{Binding Path=SelectedItem}" 
-                  GridLinesVisibility="Horizontal" 
+                  GridLinesVisibility="Horizontal"
                   BorderThickness="0"
                   SelectionMode="{Binding Path=BrowseVM.MultiSelection, Converter={local:BooleanToDataGridSelectionModeConverter}}">
             <i:Interaction.Behaviors>
@@ -52,6 +51,7 @@
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow" BasedOn="{StaticResource {x:Type DataGridRow}}">
                     <Setter Property="IsEnabled" Value="{Binding Path=IsReady}" />
+                    <EventSetter Event="MouseDoubleClick" Handler="DataGridRow_OnHandlerAsync" />
                 </Style>
             </DataGrid.RowStyle>
             <DataGrid.Columns>
@@ -60,7 +60,7 @@
                 
                 <DataGridTemplateColumn Header="Name">
                     <DataGridTemplateColumn.CellTemplate>
-                        <DataTemplate>
+                        <DataTemplate DataType="local:DriveViewModel">
                             <StackPanel Orientation="Horizontal">
                                 <Image Source="{Binding Path=Icon, Converter={local:BitmapToImageSourceConverter}}" Width="16" Height="16"/>
                                 <TextBlock Text="{Binding Path=DisplayLabel}" Margin="10 0 2 0"/>
@@ -100,7 +100,11 @@
             <Button Content="Refresh" HorizontalAlignment="Left" Command="{Binding Path=RefreshCommand}"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Content="Cancel" Click="Cancel_Click" IsCancel="True"/>
-                <Button Content="Continue" Margin="10 0" Click="Continue_Click" IsDefault="True"/>
+                <Button Content="Continue" 
+                        Margin="10 0" 
+                        Click="Continue_ClickAsync" 
+                        IsDefault="True"
+                        IsEnabled="{Binding Path=SelectedItem, Converter={local:IsNotNullConverter}}"/>
             </StackPanel>
         </Grid>
         
